--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
     </div>
 
     <div class="container">
+        <h2>We're now in the Stagging & Testing Phase</h2>
+        <small>07 September 2025</small>
+        <p>Dear Stakeholder, since our last update, we're happy to inform you that we are currently in the process of testing out our latest 
+            and newly developed Zimbabwe Geoportal. 
+        </p>
+        <p>We appreciate your thoughts, suggestions and comments on this newly developed platform. Ready to test it out? </p>
+        <a href="https://stagging.zimgeoportal.org.zw/" class="contact-button">Explore the Geoportal</a>
+        <hr>
         <h2>Notification on Zimbabwe Geoportal Service Interruption</h2>
         <p>
             As of May 15, 2025, the Zimbabwe Geoportal was taken offline following a notice from Microsoft Azure Services concerning a potential violation of privacy terms. We understand the value and importance this platform holds for researchers, government institutions, students, developers, and citizens who rely on it for open, accessible geospatial data about Zimbabwe.
