Moderated message button to Green

--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
         .contact-button:hover {
             background-color: #003f73;
         }
+        .stagging-button {
+            margin-top: 20px;
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #036f1c;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -83,8 +92,9 @@
             and newly developed Zimbabwe Geoportal. 
         </p>
         <p>We appreciate your thoughts, suggestions and comments on this newly developed platform. Ready to test it out? </p>
-        <a href="https://stagging.zimgeoportal.org.zw/" class="contact-button">Explore the Geoportal</a>
-        <hr>
+        <a href="https://stagging.zimgeoportal.org.zw/" class="stagging-button">Explore the Geoportal</a>
+        
+        <p><hr></p>
         <h2>Notification on Zimbabwe Geoportal Service Interruption</h2>
         <p>
             As of May 15, 2025, the Zimbabwe Geoportal was taken offline following a notice from Microsoft Azure Services concerning a potential violation of privacy terms. We understand the value and importance this platform holds for researchers, government institutions, students, developers, and citizens who rely on it for open, accessible geospatial data about Zimbabwe.
