Integrate AdSense ads into index.html
Added AdSense integration for monetization.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,24 @@
         <p>We appreciate your thoughts, suggestions and comments on this newly developed platform. Ready to test it out? </p>
         <a href="https://stagging.zimgeoportal.org.zw/" class="stagging-button">Explore the Geoportal</a>
         
-        <p><hr></p>
+        <p>
+            <hr>
+            <!-- START: AdSense -> 
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1726892928324403"
+     crossorigin="anonymous"></script>
+<!-- ZimGeoportal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1726892928324403"
+     data-ad-slot="4556375722"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+            <!-- END: AdSense -->
+            <hr>
+        </p>
         <h2>Notification on Zimbabwe Geoportal Service Interruption</h2>
         <p>
             As of May 15, 2025, the Zimbabwe Geoportal was taken offline following a notice from Microsoft Azure Services concerning a potential violation of privacy terms. We understand the value and importance this platform holds for researchers, government institutions, students, developers, and citizens who rely on it for open, accessible geospatial data about Zimbabwe.
