--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             text-decoration: none;
             border-radius: 5px;
         }
+        <!-- Ad Sense --> 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1726892928324403"
+     crossorigin="anonymous"></script>
     </style>
 </head>
 <body>
