--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         
         <p>
             <hr>
-            <!-- START: AdSense -> 
+            <!-- START: AdSense --> 
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1726892928324403"
      crossorigin="anonymous"></script>
 <!-- ZimGeoportal -->
